--- a/src/sharedComponents/ui/Inputs/Input.module.scss
+++ b/src/sharedComponents/ui/Inputs/Input.module.scss
@@ -60,7 +60,6 @@ input[type=file] {
 .htmlInput {
     flex-grow: 1;
     height: 22px;
-    margin-top: 6px;
     background: var(--bg-color);
     border: none;
     outline: none;
@@ -72,7 +71,6 @@ input[type=file] {
 .htmlInputDate {
     width: 100%;
     height: 22px;
-    margin-top: 6px;
     background: var(--bg-color);
     border: none;
     outline: none;
@@ -150,6 +148,11 @@ input[type=file] {
 
 .icon {
     vertical-align: middle;
+}
+
+.rowStartIcon{
+    vertical-align: middle;
+    padding: 5px;
 }
 
 .htmlInputBlock{
