--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,11 +2,31 @@
 @import 'variables/global.scss';
 @import "mixins/adaptive.scss";
 @import "mixins/adaptive-font.scss";
-@import "fonts/fonts.scss";
+// @import "fonts/fonts.scss";
 
 .app {
-  background: var(--main-bg-color);
+  // background-color: var(--main-bg-color);
   font-family: var(--mainFontFamily);
+  font-size: var(--fontSizeLarge);
+  font-weight: var(--fontWeight);
   display: flex;
-  flex-direction: column;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+
+  .content{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    max-width: 100vw;
+    min-width: 100vw;
+    
+
+    @include size-more-than-laptop {
+      padding: 30px;
+      min-height: calc(100vh - 60px);
+      max-width: 980px;
+      min-width: 980px;
+    }
+  }
 }
