--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,37 +1,32 @@
 :root{
-    --primary: #CE0209;
-    --primary-text: #000;
-    --light-text: #bbbbbb;
-    --secondary-text: #fff;
-    --main-bg-color: #f6f6f6;
-    --secondary-bg-color: #00000010;
+    --primary: #FF392B;
+    --primary-text: #000000;
 
-    --overlay-bg-color: #0000006b;
+    --input-bg: #F2F2F2;
 
-    --login-modal-bg-color: #f6f6f6;
+    --secondary-text: #E0E1DC;
+    --white-text: #ffffff;
 
-    --bg-dark: #232323;
+    --main-bg-color: #ffffff;
 
-    --bg-color: #fff;
+    // --overlay-bg-color: #0000006b;
+    // --login-modal-bg-color: #f6f6f6;
 
-    --borderColor: #e8e6e6 ;
+    --btn-active: #000000;
 
-    --gray: #e0e0e0;
-    --green: #69b64d;
+    --btn-disabled: #7C8DA5;
 
-    --shadow: 0px 2px 36px -4px rgba(34, 60, 80, 0.2);
+    // --borderColor: #e8e6e6 ;
 
-    --fontSize: 16px;
-    --fontSizeMainText: 16px;
-    --fontSizeLarge: 18px;
-    --fontSizeSmall: 12px;
-    --fontSizeNormal: 14px;
-    --fontSizeHeader: 32px;
+    //--shadow: 0px 2px 36px -4px rgba(34, 60, 80, 0.2);
 
-    --modal-z-index: 10000;
-    --overlay-z-index: 1000;
+    --fontWeight: bold;
+    --fontSize: 20px;
+    --fontSizeLarge: 32px;
+    --fontSizeSmall: 16px;
 
-    --navbarZIndex: 999;
+    // --modal-z-index: 10000;
+    // --overlay-z-index: 1000;
 
     --mainFontFamily: 'Muli';
 }
