--- a/src/programFeatures/Auth/ui/LoginForm.module.scss
+++ b/src/programFeatures/Auth/ui/LoginForm.module.scss
@@ -6,25 +6,51 @@
 
 }
 
+.WelcomeText{
+    font-weight: bolder;
+    text-align: center;
+    font-size: var(--fontSizeLarge);
+}
+
 .LoginWidget{
     background-color: var(--bg-color);
     border-radius: 30px;
-    padding: 50px;
-    margin-top: 10px;
+    padding: 0px 20px 20px 20px;
+    flex-grow: 1;
 
     .Logo {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 50px;
-        margin-bottom: 50px;
+        margin-top: 20px;
+        margin-bottom: 20px;
         margin-left: -10px;
         margin-right: -10px;
+    }
+
+    .LastInput {
+        margin-bottom: 0px;
     }
 
     .Error{
         font-size: var(--fontSizeSmall);
         color: var(--primary)
+    }
+
+    .AccountAlrearyExists{
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        .AccountAlrearyExistsText{
+            font-size: var(--fontSizeSmall);
+            color: var(--primary-text);
+        }
+        .AccountAlrearyExistsLink{
+            font-size: var(--fontSizeSmall);
+            color: var(--primary);
+            // text-decoration: underline;
+            cursor: pointer;
+        }
     }
 
     .loader{
@@ -34,12 +60,23 @@
 
     .loginBtn{
         margin-top: 20px;
-        background-color: var(--primary);
-        color: var(--secondary-text) !important;
-        padding: 15px 20px 15px 20px;
-        height: auto;
+        background-color: var(--primary) !important;;
+        color: var(--white-text) !important;
+        // padding: 10px 20px 10px 20px;
+        height: 50px;
         font-size: var(--fontSize);
         font-weight: bolder;
+        width: 100%;
+    }
+    .changeToRegistration{
+        margin-top: 20px;
+        background-color: var(--btn-active) !important;;
+        color: var(--white-text) !important;
+        // padding: 20px 20px 20px 20px;
+        height: 50px;
+        font-size: var(--fontSize);
+        font-weight: bolder;
+        width: 100%;
     }
 }
 
