--- a/src/pagesContent/MainPage/ui/MainPage.module.scss
+++ b/src/pagesContent/MainPage/ui/MainPage.module.scss
@@ -3,6 +3,6 @@
 .MainPage {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: stretch;
     flex-grow: 1;
 }
