--- a/src/programFeatures/MonthDaySelector/ui/MonthForm.module.scss
+++ b/src/programFeatures/MonthDaySelector/ui/MonthForm.module.scss
@@ -4,4 +4,82 @@
     display: flex;
     flex-direction: column;
 
+    background-color: rgb(239, 255, 250);
+    flex-grow: 1;
+    height: 100vh;
+
+    .Header{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .HeaderLeft{
+            .WeekOrMonthSelector{
+                display: flex;
+                flex-direction: row;
+                .WeekOrMonthSelectorItem{
+                    cursor: pointer;
+                }
+                .WeekOrMonthSelectorItemActive{
+                    color: red;
+                }   
+            }
+        }
+        .HeaderCenter{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .Month{
+                cursor: pointer;
+            }
+        }
+        .HeaderRight{
+        }
+        
+    }
+
+    .WeekDaysNames{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .WeekDayName{
+
+        }
+    }
+
+    .Weeks{
+        display: flex;
+        flex-direction: column;
+
+        .Week {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .WeekNumber{
+
+            }
+            .WeekDay {
+                cursor: pointer;
+    
+                .WeekDayDate{
+    
+                }
+    
+            }
+            .SelectedWeekDay{
+
+                .WeekDayDate{
+                    color: red;
+    
+                }
+            }
+            
+        }
+        
+
+    }
+
 }
