--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -4,7 +4,7 @@
 
     --input-bg: #F2F2F2;
 
-    --secondary-text: #E0E1DC;
+    --secondary-text: #b7b7b7;
     --white-text: #ffffff;
 
     --main-bg-color: #ffffff;
@@ -20,10 +20,12 @@
 
     //--shadow: 0px 2px 36px -4px rgba(34, 60, 80, 0.2);
 
-    --fontWeight: bold;
+    --fontWeight: normal;
+    --fontWeightBold: bold;
     --fontSize: 20px;
     --fontSizeLarge: 32px;
     --fontSizeSmall: 16px;
+    --mainPageMargin: 20px;
 
     // --modal-z-index: 10000;
     // --overlay-z-index: 1000;
