--- a/src/programFeatures/WeekDaySelector/ui/WeekForm.module.scss
+++ b/src/programFeatures/WeekDaySelector/ui/WeekForm.module.scss
@@ -3,50 +3,116 @@
 .WeekForm{
     display: flex;
     flex-direction: column;
+    padding: var(--mainPageMargin);
 
-    background-color: rgb(239, 255, 250);
-    flex-grow: 1;
-    height: 100vh;
+    width: calc(100vw - (var(--mainPageMargin) * 2));
+    height: calc(100vh - (var(--mainPageMargin) * 2));
+
+    font-size: var(--fontSizeSmall);
+    background-color: var(--main-bg-color);
+
+    .Icon{
+        background-color: rgba(255, 255, 255, 0);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 5px;
+        margin: 5px;
+        cursor: pointer;
+    }
 
     .Header{
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        flex-direction: column;
+        background-color: var(--main-bg-color);
 
-        .HeaderCenter{
+
+        display: flex;
+        flex-direction: column;
+
+        .DatesHeader{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-
-            .Month{
-                cursor: pointer;
+            align-items: center;
+    
+            .DatesHeaderCenter{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                font-size: var(--fontSize);
+    
+                .Month{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    cursor: pointer;
+    
+                    font-weight: var(--fontWeightBold);
+    
+                    .Icon{
+                        margin: 0;
+                    }
+                }
             }
+            
+        }
+        .Dates{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            
+            
+            .WeekDay {
+                cursor: pointer;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+    
+                .WeekDayDate{
+    
+                }
+                .WeekDayName{
+                    color: var(--secondary-text)
+                }
+    
+            }
+            .SelectedWeekDay{
+                .WeekDayDate{
+                    color: red;
+                    font-weight: var(--fontWeightBold);
+                }
+                .WeekDayName{
+                }
+            }
+        
         }
         
     }
-    .Dates{
+    
+
+    .Content{
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        background-color: azure;
+        overflow-y: auto;
+
+        .TestRow {
+            height: 30px;
+            background-color: rgba(0, 191, 255, 0.145);
+            margin: 10px;
+        }
+    }
+
+    .Footer{
+        background-color: var(--main-bg-color);
+        height: 40px;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        background-color: rgb(251, 240, 255);
         
-        .WeekDay {
-            cursor: pointer;
-
-            .WeekDayDate{
-
-            }
-            .WeekDayName{
-                
-            }
-
-        }
-        .SelectedWeekDay{
-            .WeekDayDate{
-                color: red;
-            }
-            .WeekDayName{
-            }
-        }
     }
 
 }
