--- a/src/sharedComponents/ui/Checkbox/Checkbox.module.scss
+++ b/src/sharedComponents/ui/Checkbox/Checkbox.module.scss
@@ -21,7 +21,7 @@
 
 .checkboxChecked {
     background: var(--primary);
-    background-image: url("~/public/images/circle-check-black.svg");
+    background-image: url("@/sharedComponents/assets/icons/circle-svgrepo-com.svg");
     background-repeat: no-repeat;
     background-size: 24px 24px;
     background-position: 50% 50%;
