--- a/src/sharedComponents/ui/Inputs/Input.module.scss
+++ b/src/sharedComponents/ui/Inputs/Input.module.scss
@@ -1,6 +1,5 @@
-
 .input {
-    background: var(--input-bg);
+    background: rgba(255, 255, 255, 0);
     border: 1px solid var(--borderColor);
     border-radius: 14px;
     display: flex;
@@ -9,13 +8,12 @@
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 10px;
-
     height: 30px;
 }
 
 .required{
    color: var(--primary);
-   font-size: var(--fontSizeSmall);
+//    font-size: var(--fontSizeSmall);
 }
 
 input[type=file] {
@@ -53,19 +51,19 @@ input[type=file] {
     flex-grow: 1;
 }
 
-.inputLabel {
-    font-size: var(--fontSizeSmall);
-    color: var(--light-text);
-}
+// .inputLabel {
+//     font-size: var(--fontSizeSmall);
+//     color: var(--light-text);
+// }
 
 
 .htmlInput {
     flex-grow: 1;
     height: 22px;
-    background: var(--input-bg);
+    background: rgba(255, 255, 255, 0);
     border: none;
     outline: none;
-    font-size: var(--fontSize);
+    // font-size: var(--fontSize);
     color: var(--primary-text);
 
 }
@@ -73,10 +71,10 @@ input[type=file] {
 .htmlInputDate {
     width: 100%;
     height: 22px;
-    background: var(--input-bg);
+    background: rgba(255, 255, 255, 0);
     border: none;
     outline: none;
-    font-size: var(--fontSize);
+    // font-size: var(--fontSize);
     color: var(--primary-text);
 
 }
@@ -122,7 +120,7 @@ input[type=file] {
     position: absolute;
     margin-top: -22px;
     font-weight: 500;
-    font-size: var(--fontSize);
+    // font-size: var(--fontSize);
     color: var(--primary-text);
 
     pointer-events: none;
@@ -142,7 +140,7 @@ input[type=file] {
     border: none;
     outline: none;
     height: max-content;
-    background-color: var(--input-bg);
+    background: rgba(255, 255, 255, 0);
     font-size:var(--fontSizeSmall);
     color: var(--primary-text);
     cursor: pointer;
